# aoc

aoc-2015/: Cargo.toml  README.md
aoc-2015/src/: main.rs  utils.rs
aoc-2015/src/day01/: README.md  main.rs
aoc-2015/src/day02/: main.rs
aoc-2015/src/day03/: main.rs
aoc-2015/src/day04/: main.rs
aoc-2015/src/day05/: main.rs
aoc-2015/src/day06/: main.rs
aoc-2015/src/day1/: main.rs
aoc-2015/src/day2/: main.rs
aoc-2015/src/day3/: main.rs
aoc-2020/day02_password_philosophy/: main.py
aoc-2020/day05_binary_boarding/: main.py
aoc-2020/day10_adapter_array/: main.py  test.txt
aoc-2020/day11_seating_system/: main.py
aoc-2020/day13_shuttle_seach/: main.py
aoc-2020/day16_ticket_translation/: main.py
aoc-2020/day17_conway_cubes/: main.py
aoc-2020/day18_operation_order/: main.py
aoc-2020/day19_monster_messages/: main.py
aoc-2022/day01/: main.py
aoc-2022/day02/: main.py
aoc-2022/day03/: main.py
aoc-2022/day04/: main.py
aoc-2022/day05/: main.py
aoc-2022/day06/: main.py
aoc-2022/day07/: main.py
day01_report_repair/: main.py
day09_encoding_error/: main.py
day11_seating_system/: main.py
day12_rain_risk/: main.py
day13_shuttle_seach/: main.py
day14_docking_data/: main.py
day15_rambunctious_recitation/: main.py
day16_ticket_translation/: main.py
day18_operation_order/: main.py
day1_report_repair/: input.txt
day3_toboggan_trajectory/: main.py
day4_passport_processing/: main.py
day6_custom_customs/: main.py
day7_handy_haversacks/: main.py
day8_handheld_halting/: main.py
day9_encoding_error/: main.py
